--- a/biblio.bib
+++ b/biblio.bib
@@ -274,6 +274,19 @@
 	year = {1963},
 	month = {},
 }
+@incollection {EgorovShubin1994,
+	author = {Egorov, Yu. V. and Shubin, Mikhail A.},
+	title = {Linear partial differential equations. Elements of the modern theory},
+	pages = {1--120},
+	editor = {Egorov, Yu. V. and Shubin, Mikhail A.},
+	booktitle = {Partial Differential Equations II. Elements of the Modern Theory. Equations with Constant Coefficients},
+	series = {Encyclopaedia of Mathematical Sciences},
+	volume = {31},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {1994},
+	month = {},
+}
 @book {Einstein1926,
 	author = {Einstein, Albert},
 	title = {Investigations on the Theory of the {B}rownian Movement},
@@ -744,6 +757,19 @@
 	publisher = {Graylock Press},
 	address = {Baltimore, Maryland},
 	year = {1961},
+	month = {},
+}
+@incollection {Komech1994,
+	author = {Komech, Alexander I.},
+	title = {Linear partial differential equations with constant coefficients},
+	pages = {121--255},
+	editor = {Egorov, Yu. V. and Shubin, Mikhail A.},
+	booktitle = {Partial Differential Equations II. Elements of the Modern Theory. Equations with Constant Coefficients},
+	series = {Encyclopaedia of Mathematical Sciences},
+	volume = {31},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {1994},
 	month = {},
 }
 @book {KoshlyakovSmirnovGliner1964,
@@ -1696,6 +1722,16 @@
 	year = {1980},
 	month = {},
 }
+@book {Zemanian1965,
+	author = {Zemanian, Armen H.},
+	title = {Distribution Theory and Transform Analysis},
+	series = {International Series in Pure and Applied Mathematics},
+	publisher = {McGraw-Hill},
+	address = {New York},
+	year = {1965},
+	month = {},
+	addendum = {Reprinted with corrections New York: Dover Publications, 1987},
+}
 @book {Zimmer1990,
 	author = {Zimmer, Robert J.},
 	title = {Essential Results of Functional Analysis},
@@ -1703,5 +1739,15 @@
 	publisher = {University of Chicago Press},
 	address = {Chicago},
 	year = {1990},
+	month = {},
+}
+@book {Zuily1983,
+	author = {Zuily, Claude},
+	title = {Uniqueness and Non-Uniqueness in the {C}auchy problem},
+	series = {Progress in Mathematics},
+	volume = {33},
+	publisher = {Birkh\"auser},
+	address = {Boston},
+	year = {1983},
 	month = {},
 }
