--- a/biblio.bib
+++ b/biblio.bib
@@ -199,6 +199,16 @@
 	volume = {II},
 	edition = {},
 }
+@book {deBoer2005,
+	author = {de Boer, Reint},
+	title = {Trends in Continuum Mechanics of Porous Media},
+	series = {Theory an Applications of Transport in Porous Media},
+	volume = {18},
+	publisher = {Springer},
+	address = {Norwell, Massachusetts},
+	year = {2005},
+	month = {},
+}
 @book {Deimling1985,
 	author = {Deimling, Klaus},
 	title = {Nonlinear Functional Analysis},
@@ -208,7 +218,7 @@
 	month = {},
 }
 @book {DeRham1955,
-	author = {{d}e {R}ham, Georges},
+	author = {de Rham, Georges},
 	title = {Vari\'et\'es Diff\'erentiables},
 	publisher = {Hermann},
 	address = {Paris},
@@ -565,6 +575,17 @@
 	volume = {55},
 	number = {},
 	pages = {25--55},
+}
+@book {Hormander1969,
+	author = {H{\"o}rmander, Lars},
+	title = {Linear Partial Differential Operators},
+	edition = {Third revised printing},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	series = {Die Grundlehren der ma\-the\-ma\-tisch\-en {W}issenshaften in {E}inzeldarstellungen},
+	volume = {116},
+	year = {1969},
+	month = {},
 }
 @book {Hormander1983a,
 	author = {H{\"o}rmander, Lars},
@@ -1100,6 +1121,14 @@
 	publisher = {Pitman},
 	address = {London},
 	year = {1985},
+}
+@book {Murphy1960,
+	author = {Murphy, George M.},
+	title = {Ordinary Differential Equations and Their Solutions},
+	publisher = {Van Nostrand},
+	address = {Princton, New Jersey},
+	year = {1960},
+	addendum = {Reprinted New York: Dover Publications, 2011},
 }
 @book {Muskhelishvili1958,
 	author = {Muskhelishvili, Nikolai I.},
