--- a/biblio.bib
+++ b/biblio.bib
@@ -284,6 +284,16 @@
 	year = {1963},
 	month = {},
 }
+@incollection {EgorovShubin1992,
+	author = {Egorov, Yu. V. and Shubin, Mikhail A.},
+	booktitle = {Partial Differential Equations I. Foundations of the Classical Theory},
+	series = {Encyclopaedia of Mathematical Sciences},
+	volume = {30},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {1992},
+	month = {},
+}
 @incollection {EgorovShubin1994,
 	author = {Egorov, Yu. V. and Shubin, Mikhail A.},
 	title = {Linear partial differential equations. Elements of the modern theory},
@@ -456,8 +466,7 @@
 }
 @book {GelfandShilov1964,
 	author = {Gelfand, Israel M. and Shilov, Georgiy E.},
-	title = {Generalized Functions},
-	volume = {1},
+	title = {Generalized Functions 1. Properties and Operations},
 	publisher = {Academic Press},
 	year = {1964},
 	month = {},
@@ -465,8 +474,7 @@
 }
 @book {GelfandShilov1967,
 	author = {Gelfand, Israel M. and Shilov, Georgiy E.},
-	title = {Generalized Functions},
-	volume = {3},
+	title = {Generalized Functions 3. Theory of Differential Equations},
 	publisher = {Academic Press},
 	year = {1967},
 	month = {},
@@ -1528,6 +1536,14 @@
 	address = {New York},
 	year = {1956},
 }
+@book {Sobolev1964,
+	author = {Sobolev, Sergei L.},
+	title = {Partial Differential Equations of Mathematical Physics},
+	publisher = {Pergamon Press},
+	address = {},
+	year = {1964},
+	addendum = {Reprinted New York: Dover Publications, 1989},
+}
 @article {Solonnikov1968,
 	author = {Solonnikov, Vsevolod A.},
 	title = {Estimates of the solutions of a nonstationary linearized system of {N}avier-{S}tokes equations},
@@ -1569,6 +1585,16 @@
 	number = {5},
 	pages = {1726--1740},
 	issn = {},
+}
+@book {Stein1970,
+	author = {Stein, Elias M.},
+	title = {Singular Integrals and Differentiability Properties of Functions},
+	series = {Princeton Mathematical Series},
+	volume = {30},
+	publisher = {Princeton University Press},
+	address = {Princeton, New Jersey},
+	year = {1970},
+	month = {},
 }
 @article {Stokes1845,
 	author = {Stokes, George G.},
@@ -1760,6 +1786,16 @@
 	year = {1965},
 	month = {},
 	addendum = {Reprinted with corrections New York: Dover Publications, 1987},
+}
+@book {Ziemer1989,
+	author = {Ziemer, William P.},
+	title = {Weakly Differentiable Functions},
+	series = {Graduate Texts in Mathematics},
+	volume = {120},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {1989},
+	month = {},
 }
 @book {Zimmer1990,
 	author = {Zimmer, Robert J.},
